log
Thu 12 Oct 2023 02:36:37 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
4da55bf
Thu 12 Oct 2023 02:38:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:18: error: statement with no effect [-Werror=unused-value]
   39 |   heap->heapArray[3];
      |   ~~~~~~~~~~~~~~~^~~
heap.c:39:7: error: ‘*heap.heapArray’ is used uninitialized [-Werror=uninitialized]
   39 |   heap->heapArray[3];
      |   ~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4515a54
Thu 12 Oct 2023 02:40:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
48f6363
Thu 12 Oct 2023 02:43:15 PM UTC: 
 heap.c | 22 ++++++----------------
 1 file changed, 6 insertions(+), 16 deletions(-)
 tests:  1|3
total_score: 10/70
eb9ab02
Thu 12 Oct 2023 02:44:19 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
90b65bd
Thu 12 Oct 2023 02:54:38 PM UTC: 
 heap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
c2c0f6e
Thu 12 Oct 2023 03:10:15 PM UTC: 
 heap.c | 25 ++++++++++++++++++-------
 1 file changed, 18 insertions(+), 7 deletions(-)
 tests:  2|2
total_score: 20/70
f32a878
Thu 12 Oct 2023 03:14:40 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
078f40a
Thu 12 Oct 2023 03:31:28 PM UTC: 
 heap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
5ce1c69
